--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# IntelliJ IDEA and Others 
+.DS_Store 
+.classpath 
+.project 
+.settings/ 
+target/ 
+*.iml 
+.idea 
+*.ipr 
+*.iws
