--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,13 @@
         <dependency>
             <groupId>com.nike.wingtips</groupId>
             <artifactId>wingtips-core</artifactId>
-            <version>0.10.0</version>
+            <version>0.11.0</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.nike.wingtips</groupId>
             <artifactId>wingtips-zipkin</artifactId>
-            <version>0.10.0</version>
-        </dependency>-->
+            <version>0.11.0</version>
+        </dependency>
     </dependencies>
 </project>
