fixes src directory

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <version>1.0</version>
 
     <build>
+        <sourceDirectory>src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
